lab 3 and lab 4 edits

--- a/ENGR114-Labs/Lab03-RLC-Circuit/ENGR114-Lab03-RLC-Circuit.ipynb
+++ b/ENGR114-Labs/Lab03-RLC-Circuit/ENGR114-Lab03-RLC-Circuit.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Prelab\n",
     "\n",
-    "Before starting this assignment, read through this entire document, then create a pseudocode outline of what your program will do.   Simply put, pseudocode is committing the tasks your code will carry out to paper, in plain English.  When writing pseudocode, you should not worry about how to write specific commands.  Instead, set up an outline of specific things that need to be accomplished.  This can take the form of a bulleted list, paragraphs of writing, or a flowchart.  This in meant for you to read, not Python.  The point of this is to think about what should happen without worrying about how.  Be specific.  You can start with a rough sketch, but you should refine it into smaller, explicit steps before beginning to code.  Before asking for help with this lab, you should show your instructor your pseudocode."
+    "Before starting this assignment, read through this entire document, then create a pseudocode outline of what your program will do.   Simply put, pseudocode is committing the tasks your code will carry out to paper, in plain English.  When writing pseudocode, don't worry about how to write specific commands.  Instead, set up an outline of specific things that need to be accomplished.  This can take the form of a bulleted list, paragraphs of writing, or a flowchart. Pseudocode is meant for you to read, not Python.  The point of writing pseudocode is to think about what should happen without worrying about how.  Be specific.  Start with a rough sketch, then refine it into smaller, explicit steps before beginning to code.  Before asking for help with this lab, you should show your instructor your pseudocode."
    ]
   },
   {
@@ -22,7 +22,7 @@
    "source": [
     "## Lab\n",
     "\n",
-    "This lab will deal with the analysis of a series circuit with an AC voltage source, one resistor, one capacitor, and one inductor.  You will not have to worry about the circuit analysis, as that part of will be done for you.  The voltage source has a frequency of 60 hertz, it has an amplitude of 120 volts RMS, the resistor has 100 ohms of resistance.  You need not care about these parameters because they will be built into the equations given to you later."
+    "The context of this lab involves a series circuit with an AC voltage source, one resistor, one capacitor, and one inductor.  You do not have to worry about the circuit analysis, as that part will be done for you.  The voltage source has a frequency of 60 hertz, and an amplitude of 120 volts RMS. The resistor has 100 ohms of resistance.  Don't be concerned with these these parameters because the source amplitude and voltage as well as the resistor resistance is built into the equations shown later in the la."
    ]
   },
   {
@@ -36,36 +36,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create an array ```L``` whose values will start at 0.005 and go to 0.245 in increments of 0.005.  Then create an array ```C``` with 10 evenly spaced values starting with $5*10^{-6}$ and end with $9.5*10^{-5}$."
+    "Create a NumPy array ```L``` with values that start at 0.005 and go to 0.245 in increments of 0.005.  Then create an NumPy array ```C``` with 10 evenly spaced values starting with $5 \\times 10^{-6}$ and end with $9.5 \\times 10^{-5}$ (NumPy's ```np.linspace()``` function is useful here)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given a value for L and a value for C, the circuit's current can be calculated as follows:\n",
+    "Given a value for $L$ and a value for $C$, the circuit's current can be calculated as follows:\n",
     "\n",
     "$$ \\frac{{120}}{{100 + j2\\pi \\left( {60} \\right)L - \\frac{j}{{2\\pi \\left( {60} \\right)C}}}} $$\n",
     "\n",
-    "where $j$ is the square root of negative one.  This means current is a complex number.  From a complex result for current, one can compute the power delivered to the resistor with the equation below.\n",
+    "where $j$ is the square root of negative one.  The equation above shows current is a complex number.  From a complex result for current, one can compute the power delivered to the resistor with the equation below.\n",
     "\n",
     "$$ P_R = 100{\\left| I \\right|^2} $$\n",
     "\n",
-    "The absolute value symbol here $\\left| I \\right|^2$ specifically means \"the magnitude of I.\"  There is a Python function that can compute this for complex numbers.  For example, the smallest values for L and C that we will use should yield a complex current of ```0.041458 + 0.21916i```, and a resulting power of ```4.9749```.  Use Python's  built-in value for $\\pi$ (included in the start file)."
+    "The absolute value symbol here $\\left| I \\right|^2$ specifically means \"the magnitude of I\".  There is a Python function that can compute the absolute value of a complex number.  For example, the smallest values for $L$ and $C$ yields a complex current of ```0.041458 + 0.21916i```, and a resulting power of ```4.9749```.  Use Python's  math module value for $\\pi$ or ```np.pi```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NumPy can handle complex numbers.  In NumPy, ```i``` or ```j``` can be used as the square root of negative one.  When typing ```i``` or ```j```, it must be preceded by a number.  For example, the complex number $5 + j20$ should be entered as ```5 + 20j```."
+    "NumPy can handle complex numbers.  In NumPy, ```i``` or ```j``` can be used as the square root of negative one.  The ```i``` or ```j``` character must be preceded by a number (no space in between).  For example, the complex number $5 + j20$ is entered as ```5 + 20j```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download the **lab2_start_file.py**, open the file and copy the code from **lab2_start_file.py** into a Jupyter notebook. Include your name, the date, the lab number, and the lab assignment title at the top in a markdown cell.  Be sure to comment your code to explain to those reading it (which will be mostly future you) what each part or section of code is doing."
+    "Download the **lab2_start_file.py**, open the file and copy the code from **lab2_start_file.py** into a Jupyter notebook. Include your name, the date, the lab number, and the lab assignment title at the top of the Jupyter notebook in a markdown cell.  Be sure to comment your code to explain to those reading it (which will be mostly future you) what each part or section of code is doing. Your code should have at least three sections."
    ]
   },
   {
@@ -86,14 +86,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use your results to report which specific value for $L$ and value for $C$ resulted in ```max_PR```.  Store these two results in the variables ```max_L``` and ```max_C```, respectively.  NumPy's ```np.where()``` function should be instrumental here.  "
+    "Use your results to report which specific value of $L$ and which specific value of $C$ resulted in ```max_PR```.  Store these specific value of $L$ and $C$ in the variables ```max_L``` and ```max_C```, respectively.  NumPy's ```np.where()``` function is useful to derive ```max_L``` and ```max_C```.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After you have computed your matrix of power values ```PR```, create a surface plot of this 2D array.  Code to plot ```PR``` should be supplied in the start file.  We will not worry about how this code works.  It is only meant to help you check your work.  If you add the code below to your notebook and you calculated the correct values of ```PR```, you should get a plot that looks like the one below."
+    "After you have computed your matrix of power values ```PR```, create a surface plot of this 2D array.  Code to plot ```PR``` is supplied in the **lab2_start_file.py** file.  Right now, don't worry about how the code works that builds the plot.  The plot code is only meant to help you check your work.  If you add the code below to your notebook and you calculated the correct values of ```PR```, you should get a plot that looks like the one below."
    ]
   },
   {
@@ -115,9 +115,10 @@
     "                       cmap=cm.coolwarm,\n",
     "                       linewidth=0,\n",
     "                       antialiased=True)\n",
-    "plt.xlabel('\\nL')\n",
-    "plt.ylabel('\\nC')                       \n",
-    "plt.savefig('out.png', bbox_inches='tight')  # save to file\n",
+    "plt.xlabel('L')\n",
+    "plt.ylabel('C')                       \n",
+    "plt.savefig('surface_plot.png', bbox_inches='tight')  # save to file\n",
+    "plt.show()\n",
     "```"
    ]
   },
@@ -127,7 +128,7 @@
    "source": [
     "## Topics Covered\n",
     "\n",
-    " * Plotting need not be covered before this lab, as the plotting code is given to the students.\n",
+    " * Plotting does not be covered before this lab, as the plotting code is given to the students.\n",
     " * Importing ```pi``` from Python's ```math``` module in the Standard Library\n",
     " * NumPy arrays\n",
     "   * ```np.arange()```\n",
@@ -136,8 +137,7 @@
     "   * ```np.where()```\n",
     "   * indexing arrays\n",
     " * Complex numbers in Python\n",
-    " * Python's built-in ```abs()``` function\n",
-    "\n"
+    " * Python's built-in ```abs()``` function\n"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### _By D. Kruger, modified by P.Kazarinoff, Portland Community College, 2019_"
+    "#### _By D. Kruger, modified by P. Kazarinoff, Portland Community College, 2019_"
    ]
   },
   {
@@ -190,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
