--- a/ENGR114-Labs/Lab04-Plotting_Tide_Data/ENGR114-Lab04-Plotting_Title_Level_Data.ipynb
+++ b/ENGR114-Labs/Lab04-Plotting_Tide_Data/ENGR114-Lab04-Plotting_Title_Level_Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 06 - Plotting"
+    "# Lab 04 - Plotting Tide Level Data"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "source": [
     "## Prelab\n",
     "\n",
-    "Before starting your Jupyter notebook, read through this entire document, then create a pseudocode outline of what your program will do.   Use separate markdown cells that describe what each of sections of code will do. Describe what the plots will look like in the markdown cells."
+    "Before starting the code for this lab, read through this entire document, then create a pseudocode outline of what your program will do.   Use separate markdown cells that describe what each of section of code will do. Describe what the plots will look like in the markdown cells."
    ]
   },
   {
@@ -22,11 +22,13 @@
    "source": [
     "## Lab\n",
     "\n",
-    "Take a look at the tide level data available for Astoria, OR on the NOAA website here: [https://tidesandcurrents.noaa.gov/waterlevels.html?id=9439040](https://tidesandcurrents.noaa.gov/waterlevels.html?id=9439040) The plot shows water level data points gathered from the NOAA tide station in Astoria, OR on April 15, 2018 over two days. You will aquire a similar data set from NOAA and plot the data using Matplotlib.\n",
+    "Take a look at the tide level data available for Astoria, OR on the NOAA website here: [https://tidesandcurrents.noaa.gov/waterlevels.html?id=9439040](https://tidesandcurrents.noaa.gov/waterlevels.html?id=9439040) The plot on the NOAA website shows water level data points gathered from the NOAA tide station in Astoria, OR on April 15, 2018 over two days. You will acquire a similar data set from NOAA and plot the data using Matplotlib.\n",
     "\n",
-    "Construct the ```url``` from the list of strings below. Parts of the url can be concatinated (combined) using the plus sign ```+```.\n",
+    "Construct the ```url``` from the list of strings below. Parts of the URL can be concatenated (combined) using the plus sign ```+```.\n",
     "\n",
-    "Once the ```url``` is constructed, use Panda's ```pd.read_csv()``` function to read the data into a Pandas _dataframe_ called ```df```."
+    "Once the ```url``` is constructed, use Panda's ```pd.read_csv()``` function to read the data into a Pandas _dataframe_ called ```df```.\n",
+    "\n",
+    "The Jupyter notebook code cell below shows the code necessary to build the URL you will use."
    ]
   },
   {
@@ -63,19 +65,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the URL is constructed, use Pandas ```pd.read_csv()``` function to convert the .csv file from NOAA into a Pandas dataframe called ```df```.\n",
+    "\n",
+    "The Jupyter notebook cell below demonstrates how to use ```pd.read_csv()``` build the dataframe ```df```."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date Time</th>\n",
+       "      <th>Water Level</th>\n",
+       "      <th>Sigma</th>\n",
+       "      <th>O</th>\n",
+       "      <th>F</th>\n",
+       "      <th>R</th>\n",
+       "      <th>L</th>\n",
+       "      <th>Quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-04-15 00:00</td>\n",
+       "      <td>3.478</td>\n",
+       "      <td>0.014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-04-15 00:06</td>\n",
+       "      <td>3.502</td>\n",
+       "      <td>0.017</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-04-15 00:12</td>\n",
+       "      <td>3.508</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-04-15 00:18</td>\n",
+       "      <td>3.522</td>\n",
+       "      <td>0.017</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-04-15 00:24</td>\n",
+       "      <td>3.526</td>\n",
+       "      <td>0.014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['Date Time', ' Water Level', ' Sigma', ' O', ' F', ' R', ' L',\n",
-       "       ' Quality '],\n",
-       "      dtype='object')"
+       "          Date Time   Water Level   Sigma   O   F   R   L  Quality \n",
+       "0  2018-04-15 00:00         3.478   0.014   0   0   0   0         v\n",
+       "1  2018-04-15 00:06         3.502   0.017   0   0   0   0         v\n",
+       "2  2018-04-15 00:12         3.508   0.015   0   0   0   0         v\n",
+       "3  2018-04-15 00:18         3.522   0.017   0   0   0   0         v\n",
+       "4  2018-04-15 00:24         3.526   0.014   0   0   0   0         v"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,31 +186,23 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(url)\n",
-    "df.head()\n",
-    "df.columns"
+    "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first column of the Pandas dataframe represents the date and time when the water level was measured.  For example, in the second row of data contains a value of ```2018-04-12 00:06```.  That value in the ```Date Time``` column means April 15th, 2018 at 12:06am. \n",
+    "The first column of the Pandas dataframe represents the date and time when the water level was measured.  For example, in the second row of data contains a value of ```2018-04-15 00:06```.  This value in the ```Date Time``` column means April 15th, 2018 at 12:06am. \n",
     "\n",
-    "Remove the last 6 columns of the dataframe so that there on only two first columns in the dataframe, ```Date Time``` and ```Water Level```."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```python\n",
-    "df.drop(['Sigma', 'O','F','R','L','Quality'], axis=1, inplace=True)\n",
-    "```"
+    "Remove the last 6 columns of the dataframe so that there are only the first two first columns left in the dataframe, ```Date Time``` and ```Water Level```.\n",
+    "\n",
+    "The Jupyter notebook cell below shows how to drop columns from the dataframe ```df``` using Pandas ```df.drop()``` function. Next the columns are renamed with Pandas ```df.columns``` method. The top of the resulting dataframe is shown with Pandas ```df.head()``` method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +269,7 @@
        "4  2018-04-15 00:24        3.526"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,14 +286,12 @@
    "source": [
     "The data was recorded every 6 minutes, which is every 10th or 0.1 hours. Construct a NumPy array starting at zero hours, ending at 24 hours in increments of 0.1 hours. Save this NumPy array to a variable called ```hours```.\n",
     "\n",
-    "```python\n",
-    "hours = np.arange(0,24.1,0.1)\n",
-    "```"
+    "The code cell below shows how to create the Numpy array ```hours```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,34 +303,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Single Line Plot\n",
-    "\n",
-    "Plot the water level vs time (hours) on a set of axis. Label the x-axis as time in units of hours. Label the y-axis as water level in units of meters. Include a title on the plot"
+    "The last data cleaning step is to  create a NumPy array called ```wl``` from the values in the ```water_level``` column of the dataframe ```df```.  The code cell below shows how to create the array accomplished. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.478 3.502 3.508 3.522 3.526 3.519 3.544 3.528 3.515 3.518 3.497 3.49\n",
+      " 3.469 3.453 3.422 3.396 3.36  3.316 3.288 3.242 3.197 3.15  3.109 3.063\n",
+      " 3.002 2.947 2.887 2.831 2.777 2.715 2.654 2.601 2.538 2.469 2.408 2.348\n",
+      " 2.288 2.225 2.167 2.112 2.056 2.004 1.953 1.887 1.837 1.794 1.748 1.701\n",
+      " 1.653 1.607 1.566 1.523 1.477 1.439 1.4   1.363 1.326 1.288 1.256 1.226\n",
+      " 1.194 1.169 1.149 1.127 1.109 1.09  1.073 1.059 1.049 1.043 1.039 1.036\n",
+      " 1.034 1.034 1.04  1.05  1.058 1.075 1.093 1.116 1.148 1.184 1.216 1.256\n",
+      " 1.306 1.345 1.39  1.441 1.493 1.543 1.6   1.654 1.707 1.765 1.827 1.875\n",
+      " 1.929 1.992 2.058 2.113 2.175 2.237 2.302 2.359 2.423 2.484 2.543 2.609\n",
+      " 2.663 2.715 2.776 2.828 2.88  2.929 2.967 3.011 3.068 3.105 3.138 3.18\n",
+      " 3.207 3.242 3.274 3.305 3.319 3.35  3.365 3.383 3.395 3.396 3.405 3.399\n",
+      " 3.399 3.399 3.384 3.372 3.361 3.337 3.315 3.295 3.265 3.234 3.202 3.166\n",
+      " 3.126 3.081 3.037 2.992 2.94  2.885 2.831 2.778 2.724 2.666 2.611 2.551\n",
+      " 2.496 2.444 2.384 2.326 2.27  2.213 2.157 2.106 2.053 2.    1.946 1.893\n",
+      " 1.847 1.804 1.761 1.715 1.673 1.635 1.599 1.562 1.523 1.491 1.461 1.431\n",
+      " 1.397 1.372 1.349 1.326 1.305 1.29  1.274 1.261 1.25  1.244 1.236 1.236\n",
+      " 1.242 1.247 1.255 1.266 1.282 1.303 1.325 1.345 1.374 1.411 1.445 1.484\n",
+      " 1.525 1.569 1.617 1.664 1.715 1.767 1.823 1.878 1.942 2.003 2.066 2.123\n",
+      " 2.182 2.244 2.305 2.372 2.434 2.495 2.563 2.631 2.69  2.75  2.811 2.871\n",
+      " 2.927 2.99  3.054 3.102 3.161 3.218 3.265 3.319 3.36  3.406 3.444 3.483\n",
+      " 3.523]\n"
+     ]
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(hours,df['water_level'])\n",
-    "ax.set_xlabel('Time (hours)')\n",
-    "ax.set_ylabel('Water Level (meters)')\n",
-    "ax.set_title('Tide Level in Astoria, OR on April 15, 2018 over 24 hours')\n",
-    "plt.show()"
+    "wl = np.array(df['water_level'])\n",
+    "print(wl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single Line Plot\n",
+    "\n",
+    "Plot the water level vs time (hours) on a set of axis. Label the x-axis as time in units of hours. Label the y-axis as water level in units of meters. Include a title on the plot. The plot should look something like the plot below.\n",
+    "\n",
+    "![plot 1](images/plot1.png)"
    ]
   },
   {
@@ -529,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
