--- a/ENGR114-Labs/Lab04-Plotting_Tide_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab04-Plotting_Tide_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The third column of the Pandas dataframe represents the date on which the observations in that row were taken.  For example, in the first row of data contains a value of ```20120101```.  That value in the ```DATE``` column means Jaunuary  01, 2013. \n",
+    "The third column of the Pandas dataframe represents the date on which the observations in that row were taken.  For example, in the first row of data contains a value of ```20130101```.  This value in the ```DATE``` column means January  01, 2013. \n",
     "\n",
     "Remove the first two columns of the dataframe so that the first column in the dataframe is the ```DATE``` column."
    ]
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first column of the dataframe represents the date on which the observations in that row were measured.  For example, row 48 of the dataframe contains a value of ```20130219```.  This means February 19, 2013.  Replace column 1 of dataframe with 3 columns containing the year in the first column, the month in the second column, and the day of the month in the third column.  When you are finished, your dataframe should be 1186x6 and its last row should have the following values:\n",
+    "Now the first column of the dataframe represents the date on which the observations in that row were measured.  For example, row 48 of the dataframe contains a value of ```20130219```.  This means February 19, 2013.  Replace column 1 of dataframe with 3 columns containing the year in the first column, the month in the second column, and the day of the month in the third column.  When you are finished, your dataframe should be 1186 x 6 and it's last row should have the following values:\n",
     "\n",
     "```\n",
     "2016    3     31    0    18      0 \n",
@@ -194,9 +194,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4 subplots\n",
+    "### Create 4 subplots\n",
     "\n",
-    "You will create a Matplotlib Figure 1 that will end up looking like the Figure 1 in this document below:\n",
+    "Once the data is cleaned up, create a Matplotlib Figure 1 that looks like Figure 1 in this document:\n",
     "\n",
     "![Figure_1](images/fig1.png)"
    ]
@@ -205,9 +205,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the ```pd.find()``` function to save the precipitation data (number of inches only) exclusively for days in the year 2013 to a vector NumPy array called ```precip_2013```.  Use the plt.subplots() method to plot the data in the first slot in Figure 1.  Label its title, and its y-axis as you see pictured in this document's Figure 1.  Include the grid lines as well.  Allow Matlab to decide where your grid lines and axis tick marks should be.\\\\\n",
+    "Use the ```pd.find()``` function to save the precipitation data (number of inches only) exclusively for days in the year 2013 to a vector NumPy array called ```precip_2013```.  Use the ```plt.subplots()``` method to plot the data in the first plot in Figure 1.  Include a title, and a y-axis label like you see pictured in this document's Figure 1.  Include the grid lines as well.  Allow Matplotlib to decide where your grid lines and axis tick marks should be.\n",
     "\n",
-    "Do the same for the precipitation data for 2014, then 2015, then 2016.  The plot for 2016 should include the x-axis label and have the same axis limits as the one in this document's Figure 1."
+    "Do the same for the precipitation data for 2014, then 2015, then 2016.  The plot for 2016 should include an x-axis label and have the same axis limits as the x-axis limits in this document's Figure 1."
    ]
   },
   {
@@ -216,11 +216,11 @@
    "source": [
     "### y-y plot\n",
     "\n",
-    "Use the ```pd.find()``` command to save some of the snow depth data into a NumPy array called ```winter13_14_sd```.  Remember that the column headers were in the Excel file.  Refer to that file, if need be, to see which column was for snow depth.  Remember that we deleted the date column and added 3 date columns in its place.  Your data set should only include the data from the first day of November 2013 to the last day of February 2014.  This will probably be the most difficult part of this assignment.\n",
+    "Use the ```pd.find()``` command to save some of the snow depth data into a NumPy array called ```winter13_14_sd```.  Remember what the column headers were in the Excel file.  Refer to that file, if need be, to see which column corresponded snow depth.  Remember, you deleted the date column and added 3 date columns in its place.  Your data set should only include the data from the first day of November 2013 to the last day of February 2014.  Indexing out data in this date range will probably be the most difficult part of the lab.\n",
     "\n",
-    "Do the same to select the same days' snow fallen data and save it into a NumPy array called ```winter13_14_sf```.  Use the ```ptl.plotyy()``` command to plot both sets of data on the same graph, but with different y-axes.  \n",
+    "Do the same to select the same days' snow fallen data and save it into a NumPy array called ```winter13_14_sf```.  Use the ```plt.plotyy()``` command to plot both sets of data on the same graph, but with different y-axes.  \n",
     "\n",
-    "Notice the figure has a different vertical axis on the left from that on its right.  Let Matplotlib choose your axis limits and line colors.  Be sure to include the grid lines, x-axis label, y-axis label, title, and legend you see pictured below.\n",
+    "Notice the figure has a different vertical axis on the left compared to the vertical axis on the right.  Let Matplotlib choose your axis limits and line colors.  Be sure to include the grid lines, x-axis label, y-axis label, title, and legend as seen in Figure 2.\n",
     "\n",
     "![y-y plot](images/fig2.png)"
    ]
@@ -246,9 +246,9 @@
     "\n",
     "Each student’s submission for the lab must be a single Jupyter Notebook. The Jupyter Notebook must contain markdown cells that explain the code, code cells that contain the code, and output cells that contain a total of 3 plots. The three plots produced by the code cells in the notebook should be: \n",
     "\n",
-    " * A plot that contains four sub-plots that shows level verses time\n",
+    " * A plot that contains four sub-plots that shows precipitation verses time\n",
     "\n",
-    " * A y-y plot that shows snow level on one axis and rainfall on another axis\n",
+    " * A y-y plot that shows snow level on one y-axis and snow depth on the other y-axis\n",
     "\n",
     " * A histogram\n",
     "\n",
@@ -279,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
