Lab 4 close to finished

--- a/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 06 - Plotting Weather Data"
+    "# Lab 04 - Plotting Weather Data"
    ]
   },
   {
@@ -395,7 +395,7 @@
     "\n",
     "The resulting plot should look something like the plot below:\n",
     "\n",
-    "![line plot](images/plot1.png)"
+    "![Plot 1: Line Plot](images/plot1.png)"
    ]
   },
   {
@@ -408,7 +408,7 @@
     "\n",
     "The resulting plot should look something like the plot below:\n",
     "\n",
-    "![plot 2](images/plot2.png)"
+    "![Plot 2: Multi-line Plot](images/plot2.png)"
    ]
   },
   {
@@ -425,7 +425,7 @@
     "\n",
     "The resulting figure which contains four subplots, one subplot for each year, should look something like below: \n",
     "\n",
-    "![Figure_1](images/plot3.png)"
+    "![Plot 3: Four Subplots](images/plot3.png)"
    ]
   },
   {
@@ -442,7 +442,7 @@
     "\n",
     "Notice the figure has a different vertical axis on the left compared to the vertical axis on the right.  Let Matplotlib choose your axis limits and line colors.  Be sure to include the grid lines, x-axis label, y-axis labels, title, and legend as seen in the figure below.\n",
     "\n",
-    "![y-y plot](images/plot4.png)"
+    "![Plot 4: y-y Plot](images/plot4.png)"
    ]
   },
   {
@@ -453,7 +453,7 @@
     "\n",
     "The last plot to create for this lab is a histogram. A histogram is a statistical plot that shows the frequency of values according to a number of different ranges. Use your ```winter13_14_sf``` NumPy array to build the histogram. Include 10 bins in the histogram. Make sure to match all of the labels and title from the example histogram below.\n",
     "\n",
-    "![Histogram](images/plot5.png)"
+    "![Plot 5: Histogram](images/plot5.png)"
    ]
   },
   {
