--- a/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.tex
+++ b/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.tex
@@ -404,7 +404,7 @@ The Jupyter notebook code cell below shows the imports described above.
 \texttt{.xlsx} data file into a Pandas \emph{dataframe} called
 \texttt{df}. The Panda's method \texttt{df.head()} will show the first
 couple rows of the dataframe \texttt{df}.
-
+\newpage
 The code below saves the excel sheet to the variable \texttt{df} and
 show's the first couple rows of \texttt{df}.
 
@@ -469,7 +469,7 @@ row should have the following values:
 \begin{verbatim}
 2013    1     1    0.00    44    0.0    29    12 
 \end{verbatim}
-
+\newpage
 The lines in the code cell below completes these operations. If you
 rerun the code cell, make sure to start at the beginning of the
 notebook.
@@ -532,7 +532,7 @@ a NumPy array called \texttt{wd}.
  [2.016e+03 3.000e+00 3.100e+01 {\ldots} 0.000e+00 5.900e+01 3.200e+01]]
 
     \end{Verbatim}
-
+\newpage
     \hypertarget{create-a-line-plot}{%
 \subsubsection{Create a line plot}\label{create-a-line-plot}}
 
@@ -545,12 +545,12 @@ all of the values from the precipitation column to build your plot.
 
 The resulting plot should look something like the plot below:
 
-\begin{figure}
+\begin{figure}[h!]
 \centering
 \includegraphics{images/plot1.png}
-\caption{line plot}
+\caption{Plot 1: Line Plot}
 \end{figure}
-
+\newpage
     \hypertarget{create-a-line-plot-with-two-lines}{%
 \subsubsection{Create a line plot with two
 lines}\label{create-a-line-plot-with-two-lines}}
@@ -565,12 +565,12 @@ labels and a title on the plot.
 
 The resulting plot should look something like the plot below:
 
-\begin{figure}
+\begin{figure}[h!]
 \centering
 \includegraphics{images/plot2.png}
-\caption{plot 2}
+\caption{Plot 2: Multi-line Plot}
 \end{figure}
-
+\newpage
     \hypertarget{create-4-subplots}{%
 \subsubsection{Create 4 subplots}\label{create-4-subplots}}
 
@@ -596,12 +596,12 @@ other subplots.
 The resulting figure which contains four subplots, one subplot for each
 year, should look something like below:
 
-\begin{figure}
+\begin{figure}[h!]
 \centering
 \includegraphics{images/plot3.png}
-\caption{Figure\_1}
+\caption{Plot 3: Four Subplots}
 \end{figure}
-
+\newpage
     \hypertarget{y-y-plot}{%
 \subsubsection{y-y plot}\label{y-y-plot}}
 
@@ -626,12 +626,12 @@ the vertical axis on the right. Let Matplotlib choose your axis limits
 and line colors. Be sure to include the grid lines, x-axis label, y-axis
 labels, title, and legend as seen in the figure below.
 
-\begin{figure}
+\begin{figure}[h!]
 \centering
 \includegraphics{images/plot4.png}
-\caption{y-y plot}
+\caption{Plot 4: y-y Plot}
 \end{figure}
-
+\newpage
     \hypertarget{histogram}{%
 \subsubsection{Histogram}\label{histogram}}
 
@@ -642,12 +642,12 @@ array to build the histogram. Include 10 bins in the histogram. Make
 sure to match all of the labels and title from the example histogram
 below.
 
-\begin{figure}
+\begin{figure}[h!]
 \centering
 \includegraphics{images/plot5.png}
-\caption{Histogram}
+\caption{Plot 5: Histogram}
 \end{figure}
-
+\newpage
     \hypertarget{deliverables}{%
 \subsection{Deliverables}\label{deliverables}}
 
